# chatbot

./: README.md  chatbot.py  config.pkl  dataset.txt  main.py  pyproject.toml  requirements.txt  run_chatbot.py  tokenizer.pkl  whatsapp_parser.py
