[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["arcangelo7 <arcangelomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
nltk = "^3.8.1"
numpy = "1.26.4"
tensorflow = "^2.17.0"
keras = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
